--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>Funny Socks Emporium</h1>
+      <h1 id ="socks">Funny Socks Emporium</h1>
       <nav>
         <ul>
           <li><a href="#home">Home</a></li>
@@ -36,7 +36,7 @@
       <h2>Our Products</h2>
       <div class="product">
         <img src="img/funny-socks.jpg" alt="Crazy Cat Socks" />
-        <h3>Crazy Cat Socks</h3>
+        <h3 id="ccs">Crazy Cat Socks</h3>
         <p>$10.00</p>
         <button>Add to Cart</button>
       </div>
